# object_recognition

./: CMakeLists.txt  pcl_multi_object_recognition.cpp
include/: Icp.h  KeyPoints.h  OpenniStreamer.h  define.h
include/grabber/: openni2_grabber.hpp  registration.cpp  registration.h
src/: Icp.cpp  OpenniStreamer.cpp  Ppfe.cpp  find_function.cpp  utils.cpp
